status: add memory consumption